HelpMePlay | 1.0.5
	Features:
		S Tier Anima Powers in Torghast are now identified to help players locate the best traits for classes they may not often play.
		Repairing at a merchant is now automatically handled.
	Quests:
		Added a glow to the corresponding button during the "Dead Drop" quest in Bastion.
		Added a glow to the corresponding button during the "Just Winging It" world quest in Maldraxxus.
		Added a glow to the corresponding button during the "We'll Make an Aspirant Out of You" world quest in Bastion.
	Dialog:
		Added a dialog to skip the Covenant introduction for Night Fae.
		Added a dialog for the NPCs involved in the "Insider Trading" quest in Oribos.
		Added a dialog for Project Lead Allen in Maldraxxus.
		Added a dialog for the Taloned Flayedwing in Maldraxxus.
		Added multiple dialogs for Ve'rayn.
		Added multiple dialogs for Shandris Feathermoon.
		Added dialogs for multiple NPCs in Torghast.
		Added dialogs for multiple NPCs in The Maw for the Night Fae assault.
		Added multiple dialogs for Zayhad, The Builder.
	Notes:
		Added a note for exposing the Exposed Boggarts during the "Tough Crowd" world quest in Ardenweald.
	Fixes:
		Fixed an issue where sometimes the merchant ID would be nil and toss an error.