@@ -225,6 +225,7 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Begin pet battle."]														= "Begin pet battle."
 	L["Let's do battle!"]														= "Let's do battle!"
 	L["I'd like to heal and revive my battle pets."] 							= "I'd like to heal and revive my battle pets."
+	L["A small fee for supplies is required."] 									= "A small fee for supplies is required."
 	L["Yes!"]																	= "Yes!"
 	L["Quest"]																	= "Quest"
 	L["I've heard this tale before..."]											= "I've heard this tale before..."
@@ -358,6 +359,8 @@ if (locale == "enGB" or locale == "enUS") then
 	L["Ve'lor the Messenger 1"]													= "Yes, I will help."
 	L["Calix 1"]																= "Yes, I will help."
 	L["Project Lead Allen 1"]													= "I will assist you."
+	L["Sparring Aspirant 1"]													= "Will you spar with me?"
+	L["Sparring Aspirant 2"]													= "I would like to challenge both of you to a spar."
 	L["Lord Herne 1"]															= "I will join the hunt, Lord Herne."
 	L["Zayhad, The Builder 1"]													= "I'll take this acorn and recover memories within Heartwood Grove."
 	L["Zayhad, The Builder 2"]													= "Here are the joyful memories I collected from Heartwood Grove."
